# esp32p4-uvc-video

./: README.md  sdkconfig
.devcontainer/: .devcontainerignore  ARCHITECTURE.md  DEVCONTAINER_SUMMARY.md  GITIGNORE_ADDITIONS.md  INDEX.md  QUICKSTART.md  README.md  cmake-kits.json  devcontainer.json  docker-compose.yml  espressif-devcontainer.json  launch.json  post-create.sh  post-start.sh  settings.json  tasks.json
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml  onvif_server.c  onvif_server.h  uvc_controls.c  uvc_controls.h
